--- a/majorAppFront/src/index.html
+++ b/majorAppFront/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoBWWZ0C8FRL-nCu9QZI_JHURpWfdSYRE"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoBWWZ0C8FRL-nCu9QZI_JHURpWfdSYRE"></script>
 </head>
 <body>
   <app-root></app-root>
